Bug 1141899 - If Bluetooth CoD of remote device is unclear, add common profile managers to profile list. r=shuang